ExploreWithMe.main-svc: прошёл постман